--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <h1>Harvard Square Homeless Shelter</h1>
     <div id="homeless">A Brighter Future for Cambridge's Homeless</div>
 
-    <!-- Column 1 -->
-    <div>We offer two-week, one-night, and extended stay</div>
-    <div>work contract beds throughout the duration of our</div>
-    <div>season – that is, from the evening of November 1st</div>
-    <div>through the morning of April 15th.<div>
-    <!-- Column 2 -->
-    <div>Join hundreds of college students and community</div>
-    <div>members who are making a difference and</div>
-    <div>volunteering in different capacities at the Harvard</div>
-    <div>Square Homeless Shelter.</div>
-    <!-- Column 3 -->
-    <div>The Harvard Square Homeless Shelter relies on the</div>
-    <div>generosity of individual donors, alumni, and other</div>
-    <div>friends of HSHS who understand the value of our</div>
-    <div>programming and services.</div>
+    <div class="row">
+        <div class="column">
+            <div>We offer two-week, one-night, and extended stay</div>
+            <div>work contract beds throughout the duration of our</div>
+            <div>season – that is, from the evening of November 1st</div>
+            <div>through the morning of April 15th.<div>
+        </div>
+        <div class="column">
+            <div>Join hundreds of college students and community</div>
+            <div>members who are making a difference and</div>
+            <div>volunteering in different capacities at the Harvard</div>
+            <div>Square Homeless Shelter.</div>
+        </div>
+        <div class="column">
+            <div>The Harvard Square Homeless Shelter relies on the</div>
+            <div>generosity of individual donors, alumni, and other</div>
+            <div>friends of HSHS who understand the value of our</div>
+            <div>programming and services.</div> 
+        </div>
+    </div>
+    <hr />
 </body>
 </html>
