--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 </style>
 <body>
-    <h1>Harvard Square Homeless Shelter</h1>
+    <h1 align="center">Harvard Square Homeless Shelter</h1>
     <div id="homeless">A Brighter Future for Cambridge's Homeless</div>
     <div class="row">
         <div class="column">
