columns and center align

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 </style>
 <body>
     <h1 align="center">Harvard Square Homeless Shelter</h1>
-    <div id="homeless">A Brighter Future for Cambridge's Homeless</div>
+    <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><br />
     <div class="row">
-        <div class="column">
-            We offer two-week, one-night, and extended stay<br />
-            work contract beds throughout the duration of our<br />
-            season – that is, from the evening of November 1st<br />
-            through the morning of April 15th.<br />
+        <div align="center", class="column">
+                We offer two-week, one-night, and extended stay<br />
+                work contract beds throughout the duration of our<br />
+                season – that is, from the evening of November 1st<br />
+                through the morning of April 15th.<br />
         </div>
-        <div class="column">
-            Join hundreds of college students and community<br />
-            members who are making a difference and<br />
-            volunteering in different capacities at the Harvard<br />
-            Square Homeless Shelter.<br />
+        <div align="center", class="column">
+                Join hundreds of college students and community<br />
+                members who are making a difference and<br />
+                volunteering in different capacities at the Harvard<br />
+                Square Homeless Shelter.<br />
         </div>
-        <div class="column">
-            The Harvard Square Homeless Shelter relies on the<br />
-            generosity of individual donors, alumni, and other<br />
-            friends of HSHS who understand the value of our<br />
-            programming and services.<br />
+        <div align="center", class="column">
+                The Harvard Square Homeless Shelter relies on the<br />
+                generosity of individual donors, alumni, and other<br />
+                friends of HSHS who understand the value of our<br />
+                programming and services.<br />
         </div>
     </div>
 </body>
