--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 </style>
 <body>
     <h1 align="center">Harvard Square Homeless Shelter</h1>
-    <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><br />
-    <hr />
+    <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><br /><hr />
     <div class="row">
         <div align="center", class="column">
                 We offer two-week, one-night, and extended stay<br />
@@ -38,7 +37,6 @@
                 friends of HSHS who understand the value of our<br />
                 programming and services.<br />
         </div>
-    </div>
-    <hr />
+    </div><hr />
 </body>
 </html>
