changed file extension added background color

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
         color: #FBFCFC; 
         font-family: cambria, arial;
     }
+    body {
+        background-color: #CB300F;
+    }
 </style>
 <body>
     <h1>Contact Us!</h1>
