--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 align="center">Harvard Square Homeless Shelter</h1>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
     <div class="row">
-        <div align="center", class="column2" href=>
+        <div align="center", class="column2" href="https://rhysgilk.github.io/serviceproj/contact.html">
                 Services<br />
         </div>
         <div align="center", class="column2">
