--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <h1 align="center">Harvard Square Homeless Shelter</h1>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
     <div class="row">
-        <div align="center", class="column2" href="https://rhysgilk.github.io/serviceproj/contact.html">
+        <div align="center", class="column2">
                 Services<br />
         </div>
         <div align="center", class="column2">
-                Contact<br />
+                <a href="https://rhysgilk.github.io/serviceproj/contact.html">Contact</a><br />
         </div>
     </div><hr />
     <img src="https://imgur.com/FWY7AHA.jpg" /><hr />
