--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 Services<br />
         </div>
         <div align="center", class="column2">
-                <a href="https://rhysgilk.github.io/serviceproj/contact.html">Contact</a><br />
+                <a href="contact.html">Contact</a><br />
         </div>
     </div><hr />
     <img src="https://imgur.com/FWY7AHA.jpg" /><hr />
