test clickable box

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         <div align="center", class="column2">
                 Services<br />
         </div>
-        <div align="center", class="column2">
-                <a href="contact.html">Contact</a><br />
-        </div>
+        <a href="contact.html">
+            <div align="center", class="column2">
+                    Contact<br />
+            </div>
+        </a>
     </div><hr />
     <img src="https://imgur.com/FWY7AHA.jpg" /><hr />
     <div class="row">
