Add services page

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
     <h1 align="center">Harvard Square Homeless Shelter</h1>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
     <div class="row">
-        <div align="center", class="column2">
-                Services<br />
-        </div>
+        <a href="simpleservices.html">
+            <div align="center", class="column2">
+                    Services<br />
+            </div>
+        </a>
         <a href="contact.html">
             <div align="center", class="column2">
                     Contact<br />
