--- a/simpleservices.html
+++ b/simpleservices.html
@@ -7,10 +7,16 @@
         color: #FBFCFC; 
         font-family: cambria, arial;
     }
+    h2 {
+        color: #FBFCFC; 
+        font-family: cambria, arial;
+    }
     body {
         background-color: #CB300F;
     }
 </style>
 <body>
-    <h1>Services</h1>
+    <h1 align="center">Harvard Square Homeless Shelter</h1>
+    <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
+    <h2>Services</h2>
 </body>
