--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,18 @@
         color: #FBFCFC; 
         font-family: cambria, arial;
     }
+    h2 {
+        color: #FBFCFC; 
+        font-family: cambria, arial;
+    }
     body {
         background-color: #CB300F;
     }
 </style>
 <body>
-    <h1>Contact Us!</h1>
+    <h1 align="center">Harvard Square Homeless Shelter</h1>
+    <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
+    <h2>Contact Us!</h2>
     <div>Phone: 617-547-2841</div>
     <div>Toll-free: 1-888-285-4038</div> <br />
     <div>Shelter street address:</div>
