--- a/simpleservices.html
+++ b/simpleservices.html
@@ -11,6 +11,11 @@
         color: #FBFCFC; 
         font-family: cambria, arial;
     }
+    h4 {
+        color: #FBFCFC; 
+        font-family: cambria, arial;
+        font-style: italic;
+    }
     body {
         background-color: #CB300F;
     }
