--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,18 @@
 <body>
     <h1 align="center">Harvard Square Homeless Shelter</h1>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
+    <div class="row">
+        <a href="../index.html">
+            <div align="center", class="column2">
+                    Home<br />
+            </div>
+        </a>
+        <a href="simpleservices.html">
+            <div align="center", class="column2">
+                    Services<br />
+            </div>
+        </a>
+    </div><hr />
     <h2>Contact Us!</h2>
     <div>Phone: 617-547-2841</div>
     <div>Toll-free: 1-888-285-4038</div> <br />
