--- a/simpleservices.html
+++ b/simpleservices.html
@@ -24,4 +24,16 @@
     <h1 align="center">Harvard Square Homeless Shelter</h1>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
     <h2>Services</h2>
+    <div class="row">
+        <a href="../index.html">
+            <div align="center", class="column2">
+                    Home<br />
+            </div>
+        </a>
+        <a href="contact.html">
+            <div align="center", class="column2">
+                    Contact<br />
+            </div>
+        </a>
+    </div><hr />
 </body>
