added menu button

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,24 @@
 <head>
 </head>
 <style>
+    .column2 {
+        display: block;
+        box-sizing: border-box;
+        float: left;
+        width: 50%;
+        background-color: #D74323;
+        font-family: "Trebuchet MS", arial;
+        font-size: 16px;
+        color: #FBFCFC;
+        line-height: 1.6;
+        padding: 2px;
+    }
+    .column2:hover {background-color: #CD9F95;}
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
     h1 {
         color: #FBFCFC; 
         font-family: cambria, arial;
@@ -24,7 +42,7 @@
     <h1 align="center">Harvard Square Homeless Shelter</h1>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
     <div class="row">
-        <a href="../index.html">
+        <a href="index.html">
             <div align="center", class="column2">
                     Home<br />
             </div>
