--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     }
 </style>
 <body>
-    <h1 align="center">Harvard Square Homeless Shelter</h1>
+    <a href="index.html">
+        <h1 align="center">Harvard Square Homeless Shelter</h1>
+    </a>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
     <div class="row">
         <a href="simpleservices.html">
