--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         height: auto;
         overflow: hidden;
     }
+    a { 
+        text-decoration: none; 
+    }
 </style>
 <body>
     <a href="index.html">
