--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,9 @@
     body {
         background-color: #CB300F;
     }
+    a { 
+        text-decoration: none; 
+    }
 </style>
 <body>
     <a href="index.html">
