--- a/simpleservices.html
+++ b/simpleservices.html
@@ -1,45 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="mystyle.css" />
 </head>
 <style>
-    .column2 {
-        display: block;
-        box-sizing: border-box;
-        float: left;
-        width: 50%;
-        background-color: #D74323;
-        font-family: "Trebuchet MS", arial;
-        font-size: 16px;
-        color: #FBFCFC;
-        line-height: 1.6;
-        padding: 2px;
-    }
-    .column2:hover {background-color: #CD9F95;}
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-    h1 {
-        color: #FBFCFC; 
-        font-family: cambria, arial;
-    }
-    h2 {
-        color: #FBFCFC; 
-        font-family: cambria, arial;
-    }
-    h4 {
-        color: #FBFCFC; 
-        font-family: cambria, arial;
-        font-style: italic;
-    }
-    body {
-        background-color: #CB300F;
-    }
-    a { 
-        text-decoration: none; 
-    }
 </style>
 <body>
     <a href="index.html">
@@ -59,4 +23,15 @@
         </a>
     </div><hr />
     <h2>Services</h2>
+    <h4>MEALS</h4>
+    <p1>Guests at the shelter receive breakfast and dinner. Blankets, basic toiletries (e.g. soap, shampoo, toothpaste), and food are available for guests as well as non-guests at the door.</p1>
+    <h4>LAUNDRY</h4>
+    <p1>We maintain a washer and dryer for guest use.</p1>
+    <h4>COMPUTERS</h4>
+    <p1>Three computers with internet connection and a printer are available for guest throughout their stay.</p1>
+    <h4>REFERRALS</h4>
+    <p1>If no beds are available at HSHS, staff will make referrals to other area shelters upon request.</p1>
+    <h4>CASE MANAGEMENT</h4>
+    <p1>Our Resource Advocacy program provides case-management to our guests to help them connect with social services in the Boston/Cambridge area. Resource Advocates (RAs) help guests with employment, housing, transport, education, health services and more. RAs are available to work with guests staying at the shelter on most evenings.</p1>
 </body>
+</html>
