--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="mystyle.css" />
 </head>
 <style>
-    .column2 {
+    p1 {
         display: block;
-        box-sizing: border-box;
-        float: left;
-        width: 50%;
-        background-color: #D74323;
-        font-family: "Trebuchet MS", arial;
-        font-size: 16px;
-        color: #FBFCFC;
-        line-height: 1.6;
-        padding: 2px;
-    }
-    .column2:hover {background-color: #CD9F95;}
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-    h1 {
         color: #FBFCFC; 
         font-family: cambria, arial;
-    }
-    h2 {
-        color: #FBFCFC; 
-        font-family: cambria, arial;
-    }
-    h4 {
-        color: #FBFCFC; 
-        font-family: cambria, arial;
-        font-style: italic;
-    }
-    body {
-        background-color: #CB300F;
-    }
-    a { 
-        text-decoration: none; 
     }
 </style>
 <body>
     <a href="index.html">
+        <img class="logo"; src="https://imgur.com/tvyJWPS.jpg" />
         <h1 align="center">Harvard Square Homeless Shelter</h1>
     </a>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
@@ -59,17 +29,25 @@
         </a>
     </div><hr />
     <h2>Contact Us!</h2>
-    <div>Phone: 617-547-2841</div>
-    <div>Toll-free: 1-888-285-4038</div> <br />
-    <div>Shelter street address:</div>
-    <div>Harvard Square Homeless Shelter</div>
-    <div>66 Winthrop St.</div>
-    <div>Cambridge, MA 02138</div> <br />
-    <div>Mailing address for donations, </div>
-    <div>correspondence, and paperwork: </div>
-    <div>Harvard Square Homeless Shelter</div>
-    <div>Phillips Brooks House</div>
-    <div>Harvard Yard</div>
-    <div>Cambridge, MA 02138</div>
+    <p1 style="color:#FBFCFC">
+        <div>Phone: 617-547-2841</div>
+        <div>Toll-free: 1-888-285-4038</div> <br />
+        <div>Shelter street address:</div>
+        <div>Harvard Square Homeless Shelter</div>
+        <div>66 Winthrop St.</div>
+        <div>Cambridge, MA 02138</div> <br />
+        <div>Mailing address for donations, </div>
+        <div>correspondence, and paperwork: </div>
+        <div>Harvard Square Homeless Shelter</div>
+        <div>Phillips Brooks House</div>
+        <div>Harvard Yard</div>
+        <div>Cambridge, MA 02138</div>
+    </p1>
+    <div class="row">
+        <div id="footer"; align="center"; style="color:#FBFCFC">
+            <hr /><em>Harvard Square Homeless Shelter is open from November 1st 
+            through the morning of April 15th.</em><hr />
+        </div>
+    </div>
 </body>
 </html>
