--- a/simpleservices.html
+++ b/simpleservices.html
@@ -4,9 +4,15 @@
     <link rel="stylesheet" type="text/css" href="mystyle.css" />
 </head>
 <style>
+    p1 {
+        display: block;
+        color: #FBFCFC; 
+        font-family: cambria, arial;
+    }
 </style>
 <body>
     <a href="index.html">
+        <img class="logo"; src="https://imgur.com/tvyJWPS.jpg" />
         <h1 align="center">Harvard Square Homeless Shelter</h1>
     </a>
     <h4 align="center"id="homeless">A Brighter Future for Cambridge's Homeless</h4><hr />
@@ -33,5 +39,11 @@
     <p1>If no beds are available at HSHS, staff will make referrals to other area shelters upon request.</p1>
     <h4>CASE MANAGEMENT</h4>
     <p1>Our Resource Advocacy program provides case-management to our guests to help them connect with social services in the Boston/Cambridge area. Resource Advocates (RAs) help guests with employment, housing, transport, education, health services and more. RAs are available to work with guests staying at the shelter on most evenings.</p1>
+    <div class="row">
+        <div id="footer"; align="center"; style="color:#FBFCFC">
+            <hr /><em>Harvard Square Homeless Shelter is open from November 1st 
+            through the morning of April 15th.</em><hr />
+        </div>
+    </div>
 </body>
 </html>
